# projectmind

./: LICENSE  README.md  README_llama_cpp.md  alembic.ini  insert_openchat.sql  prompt.txt  pyproject.toml  register_prompt.py  run_agent_test.py  run_planner_test.py  test_llama_import.py
outputs/: wizardcoder-python-34b-v1_0_Q5_K_M.py
projectmind/agents/: agent_factory.py  base_agent.py
projectmind/api/: schemas.py  tasks.py
projectmind/checkpoints/: postgres_checkpointer.py
projectmind/db/: db.py  session.py  session_async.py
projectmind/db/crud/: project.py
projectmind/interface/: slack_listener.py
projectmind/llm/: llama_loader.py  llama_provider.py  llm_provider.py  prompt_formatter.py
projectmind/memory/: memory_manager.py
projectmind/models/: chat_message.py
projectmind/optimization/: optimize_agent.py  optimize_agent_deep.py  optimize_loop.py  optimizer_core.py
projectmind/prompts/: prompt_manager.py
projectmind/tasks/: task_manager.py
projectmind/utils/: agent_evaluator.py  agent_runner.py  context_handler.py  input_adapter.py  language_utils.py  logger.py  prompt_generator.py  prompt_optimizer.py  slack_notifier.py  task_handler.py
projectmind/workflows/: agent_executor.py  agent_flow.py  flow_builder.py  planner_flow.py  slack_notifier.py
scripts/: bench_until_output_valid.py  benchmark_llm_models.py  bootstrap_agent_test_inputs.py  bootstrap_all_models_and_agents.py  bootstrap_best_models.py  get_last_agent_runs.py  get_last_planner_runs.py  install_llama_cpp.sh  list_system_state.py  mixtral_test.py  optimize_llm_config.py  optimize_wizardcoder.py  print_llm_summary.py  register_default_agents.py  register_default_prompts.py  register_mixtral_for_planner.py  reset_llm_and_agents.py  reset_llm_models.py  run_agent.py  seed_all.py  seed_prompts.py  setup_llama_cpp.sh  switch_planner_model.py  test.py  test_llama_cpp_lib.py  test_llama_import.py  test_llm_speed.py  test_mixtral.py  test_prompt_optimizer.py  test_wizardcoder_codegen.py  test_wizardcoder_full.py  test_wizardcoder_real_cases.py  update_agent_goals.py  upsert_prompts.py  validate_gguf.py
scripts/benchmarks/: run_benchmark.py
(+38 files in other folders)
